Closed Bug 391960 Opened 18 years ago Closed 18 years ago

Crash when double click on info button of canceled download in the new DM[@ nsMenuPopupFrame::SetPopupPosition]

Categories

(Core :: XUL, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: stream, Assigned: enndeakin)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6 When download is canceled and the popup info from the blue icon is showed, if the blue icon is double clicked at this time the browser crashes. Tested on 2007081205 Minefield/3.0a8pre Reproducible: Always Steps to Reproduce: 1.Open the new DM 2.Start to download a file and cancel it 3.Click on the blue information icon to show up the popup information 4.Double click on the blue information icon
Version: unspecified → Trunk
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a8pre) Gecko/2007081203 Minefield/3.0a8pre ID:2007081203 I just reproduced this.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash, regression
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007081212 Minefield/3.0a8pre ID:2007081212 I can't reproduce with this build. doubleclick causes downloading to restart
Summary: Crash when double click on canceled download in the new DM → Crash when double click on canceled download in the new DM[@ nsMenuPopupFrame::SetPopupPosition]
(In reply to comment #2) > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007081212 > Minefield/3.0a8pre ID:2007081212 > > I can't reproduce with this build. > doubleclick causes downloading to restart > Forget that, crash here too
Summary: Crash when double click on canceled download in the new DM[@ nsMenuPopupFrame::SetPopupPosition] → Crash when double click on info button of canceled download in the new DM[@ nsMenuPopupFrame::SetPopupPosition]
maybe relevant: bug 279539
Is this the crash in SetPopupPosition that appears in the top bugs list?
This code just landed yesterday, so I'd think not. Might be a way to cause it though.
The stacktrace in the url looks the same and nsMenuPopupFrame hasn't changed recently, so it looks like the same crash.
What I think is happening here is that the richlistitem the context menu is anchored to is being removed. This is because the richlistbox has this hacky mechanism to open the context menu manually, and supplies the item as an custom anchor. The fix is to null-check the document to anchor is in, which, of course, should be fixed anyway. Here, if the document is null, we just anchor to the root frame instead.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #276541 - Flags: superreview?(bzbarsky)
Attachment #276541 - Flags: review?(bzbarsky)
Comment on attachment 276541 [details] [diff] [review] null-check document Makes sense.
Attachment #276541 - Flags: superreview?(bzbarsky)
Attachment #276541 - Flags: superreview+
Attachment #276541 - Flags: review?(bzbarsky)
Attachment #276541 - Flags: review+
Attachment #276541 - Flags: approval1.9?
Attachment #276541 - Flags: approval1.9? → approval1.9+
Component: Download Manager → XP Toolkit/Widgets
Product: Firefox → Core
QA Contact: download.manager → xptoolkit.widgets
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crash Signature: [@ nsMenuPopupFrame::SetPopupPosition]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: