Bug 391960, null check document of anchor node, r+sr=bz,a=damon